# cmapss-agentic-factory

./: .gitignore  README.md  generate_seed.py  pyproject.toml  seed.parquet
cmapss_simulator/: Makefile  README.md  docker-compose.yml  go.mod  go.sum
cmapss_simulator/.github/workflows/: ci.yml
cmapss_simulator/cmd/simulator/: main.go
cmapss_simulator/configs/: .env.example
cmapss_simulator/dashboard/: Dockerfile  app.py  requirements.txt
cmapss_simulator/data/cmapss_data/: readme.txt
cmapss_simulator/dbt/: .user.yml  dbt_project.yml  profiles.yml
cmapss_simulator/dbt/models/: schema.yml
cmapss_simulator/docs/adr/: 001-dependency-inversion.md
cmapss_simulator/internal/arinc429/: encoder.go
cmapss_simulator/internal/chaos/: adversarial_drift.go  network_burst.go  ocean_blackout.go  orchestrator.go  out_of_bounds.go  schema_rot.go  sensor_freeze.go  sla_breach.go  time_drift.go  zombie_state.go  zstd_bomb.go
cmapss_simulator/internal/database/: contracts.go  dispatcher.go  schema_generated.go
cmapss_simulator/internal/domain/: models.go
cmapss_simulator/internal/flight/: metrics.go  worker.go
cmapss_simulator/internal/physics/: engine.go  (+1 more)
cmapss_simulator/schemas/: engine_telemetry_contract.yaml
cmapss_simulator/scratch/: batch_ingest.py  check_kafka.py  count_kafka.go  inspect_kafka.go  purge_kafka.go  test_spark_kafka.py
cmapss_simulator/scripts/: generate_contracts.py  init_db.py
cmapss_simulator/streaming/: Dockerfile  consumer.py  processors.py  requirements.txt
cmapss_simulator/terraform/: main.tf  schema.json  variables.tf
(+7 files in other folders)
