[project]
name = "cmapss-agentic-factory"
version = "0.1.0"
description = "Industrial IoT Edge simulator & Multi-Agent orchestration pipeline for predictive maintenance. Streams NASA C-MAPSS telemetry with injected noise into an LLM-driven Factory 4.0 ecosystem, featuring automated RUL analysis and built-in chaos engineering."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyyaml>=6.0.3",
    "ruff>=0.15.7",
]
